<resources>

    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">

    </style>

    <!-- TODO: Please delete the string arrays below once the recyclerView is connected to our database -->
    <string-array name="names_of_unsatisfied_customers">
        <item> Joseph </item>
        <item> Hannah</item>
        <item> Mark </item>
        <item> Sophie </item>
    </string-array>

    <string-array name="times_of_complaint">
        <item> 8:30 am </item>
        <item> 10:15 pm </item>
        <item> 1:15 pm </item>
        <item> 5:55 am </item>
    </string-array>

    <string-array name="title_of_complaint">
        <item> Overpriced Much </item>
        <item> Hair in Food </item>
        <item> Sus Guy </item>
        <item> Got Served Kraft Dinner </item>
    </string-array>

    <string-array name="description_of_complaint">
        <item>The woman tried selling me chicken salad for 30 bucks when she figured I drove a bugatti. She
        even dared to ask for tip afterwards. </item>
        <item>Absolutely appalled by what I was served. My meal was full of hair strands. I suggested she consider using
        a deep conditioner to counter her receding hairline issues. </item>
        <item>Roberto couldn\'t stop undressing me with his eyes the entire time. He then suggested I pay him "with my body".
        As a man, I yeeted the fuck out of there real quick. </item>
        <item>Not what I had in mind when I thought of cheese macaroni. The noodles weren\'t even cooked properly. How do you mess up Kraft Dinner? </item>
    </string-array>

    <string-array name="cook_concerned_by_complaint">
        <item> Sally </item>
        <item> Michelle </item>
        <item> Roberto </item>
        <item> Tom </item>
    </string-array>

    <string name="app_name">Mealer</string>
    <string name="title_activity_register">Register</string>
    <string name="registering_welcome_message">WELCOME</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="dismiss">Dismiss <u>underline</u>.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_email">Email</string>
    <string name="next_btn">NEXT</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="register">REGISTER</string>
    <string name="enter_address">Address</string>
    <string name="credit_card_info">CREDIT CARD INFORMATION</string>
    <string name="name_on_card">Name On Card</string>
    <string name="enter_card_number">Card Number</string>
    <string name="upload">Upload</string>
    <string name="back">back</string>
    <string name="mealer_s_logo_and_slogan">Mealer\'s Logo and Slogan</string>
    <string name="button_submit">submit</string>
    <string name="admin">Administrator</string>
    <string name="client">Client</string>
    <string name="cook">Cook</string>
    <string name="logoff">LOG OFF</string>
    <string name="hello">Hello \u0026 \nWelcome</string>


</resources>