<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_yellow"
    android:padding="30dp"
    android:transitionName="transition_signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/reg3BackButt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back"
            app:tint="@color/coffee_brown"
            app:srcCompat="@drawable/general_back_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_black"
                android:text="@string/credit_card_info"
                android:textAllCaps="true"
                android:textColor="@color/coffee_brown"
                android:textSize="40sp"
                android:transitionName="transition_title_text"  />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_on_card"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/milk_tea"
                app:hintTextColor="@color/coffee_brown"
                app:startIconTint="@color/milk_tea">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ccNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:textColor="@color/coffee_brown"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ccNumLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_card_number"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/milk_tea"
                app:hintTextColor="@color/coffee_brown"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/milk_tea"
                app:startIconDrawable="@drawable/field_password_icon"
                app:startIconTint="@color/milk_tea">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ccNumEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"
                    android:textColor="@color/coffee_brown"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Expiration Date"
                android:textColor="@color/coffee_brown" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiryLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="MMYY"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/milk_tea"
                app:hintTextColor="@color/coffee_brown"
                app:startIconTint="@color/milk_tea">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expiryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:textColor="@color/coffee_brown"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Security Code"
                android:textColor="@color/coffee_brown" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cvcLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="CVC"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/milk_tea"
                app:hintTextColor="@color/coffee_brown"
                app:startIconTint="@color/milk_tea">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cvcEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:textColor="@color/coffee_brown"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/clientSubmitButt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/coffee_brown"
                android:elevation="5dp"
                android:fontFamily="@font/roboto"
                android:onClick="callNextSigupScreen"
                android:text="@string/button_submit"
                android:textColor="@color/white"
                android:transitionName="transition_next_btn"
                app:backgroundTint="@color/coffee_brown"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/reg3LoginButt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:elevation="5dp"
                android:fontFamily="@font/roboto"
                android:onClick="callLoginFromSignUp"
                android:text="@string/login"
                android:textColor="@color/coffee_brown"
                android:transitionName="transition_login_btn" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>