<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backButtForReg4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_yellow"
    android:padding="30dp"
    android:transitionName="transition_signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/reg4BackButt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/general_back_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


            <TextView
                android:id="@+id/reg4HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_black"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/reg4Text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="TextView"
                android:textColor="#000000"
                tools:text="Profile Description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileDescUpper"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileDescEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tell us about yourself"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/reg4Text2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:fontFamily="@font/roboto"
                android:text="Void Cheque"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="14sp" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="11dp"
                android:background="?android:attr/listDivider"
                tools:visibility="invisible" />

            <Button
                android:id="@+id/galleryLaunchButt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload" />

            <ImageView
                android:id="@+id/peekChequeImg"
                android:layout_width="match_parent"
                android:layout_height="111dp"
                app:srcCompat="@android:drawable/ic_menu_add" />

            <!-- TODO: add uploadCheque button please     -->
        </LinearLayout>


        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/listDivider"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/cookSubmitButt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:elevation="5dp"
            android:fontFamily="@font/roboto"
            android:onClick="callNextSigupScreen"
            android:text="@string/button_submit"
            android:textColor="@color/white"
            android:transitionName="transition_next_btn"
            app:backgroundTint="#000000"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/reg4LoginButt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:elevation="5dp"
            android:fontFamily="@font/roboto"
            android:onClick="callLoginFromSignUp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:transitionName="transition_login_btn" />


    </LinearLayout>


</ScrollView>